--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                
 
                                     <ul class="entry__meta">
-                                        <li><a href="http://www.sustc.edu.cn/en/faculty_54"> </a> Shanghai Center for Mathematical Sciences</li> </a> Fudan University</li> <li>Shanghai, China</li>
+                                        <li> Shanghai Center for Mathematical Sciences</li> <li> Fudan University</li> <li>Shanghai, China</li>
  					<li>August 19-21, 2019</li>
                                     </ul>
                                 </div>
