--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                
 
                                     <ul class="entry__meta">
-                                        <li> Shanghai Center for Mathematical Sciences</li> <li> Fudan University</li> <li>Shanghai, China</li>
- 					<li>August 19-21, 2019</li>
+                                        <li> Huiyuan 3-415</li> 
+ 					<li>Tuesdays 9-12, Fall 2020</li>
                                     </ul>
                                 </div>
                             </div> <!-- end entry__content -->
