--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                             <div class="entry__content">
 
-                                <h1><a>Applied and Computational Topology Seminar</a></h1>
+                                <h1><a>Applied and Computational Topology Seminar, Fall 2020</a></h1>
 
                
 
