--- a/index.html
+++ b/index.html
@@ -83,13 +83,12 @@
 
                             <div class="entry__content">
 
-                                <h1><a>Applied and Computational Topology Seminar, Fall 2020</a></h1>
+                                <h1><a>Applied and Computational Topology Seminar</a></h1>
 
                
 
                                     <ul class="entry__meta">
-                                        <li> Huiyuan 3-415</li> 
- 					<li>Tuesdays 9-12, Fall 2020</li>
+                                        <li>Southern University of Science and Technology</li>
                                     </ul>
                                 </div>
                             </div> <!-- end entry__content -->
@@ -119,24 +118,10 @@
    
               
 
-                <h3><a id="A"></a>About</h3>
-                <p>The International Workshop on Algebraic Topology is a four day event which will take place at 
-                    the <a href="http://math.sustc.edu.cn/index/?lang=en" target="_blank">
-                    Southern University of Science and Technology</a> (SUSTech) in Shenzhen, China from June 6 to June 9, 2018. 
-                    This is a satellite event for the joint AMS-CMS
-                    <a href="http://www.ams.org/meetings/international/2258_program_ss2.html#title" target="_blank">
-                        Special Session on Algebraic and Geometric Topology</a> which will take place at Fudan University in Shanghai, China from June 11 to June 14, 2018.</p>
+                <h3><a id="A"></a>Location</h3>
+                <p>Tuesdays at 9 am in Huiyuan 3-415
 
-            <p>The organizers gratefully acknowledge the support by
-                <a href="http://www.sustc.edu.cn/en" target="_blank">
-                        Southern University of Science and Technology</a>,
-                <a href="http://www.szfb.gov.cn" target="_blank">
-                        Finance Commission of Shenzhen Municipality</a>,
-                <a href="http://www.nsfc.gov.cn/english/site_1/index.html" target="_blank">
-                        National Natural Science Foundation of China</a>,
-                and the <a href="https://www.colorado.edu/math" target="_blank">
-                        Mathematics Department of the University of Colorado Boulder</a>.
-            </p>
+</p>
 
                 <h3><a id="O"></a>Organizers</h3>
                 <p>
