--- a/index.html
+++ b/index.html
@@ -118,8 +118,32 @@
    
               
 
-                <h3><a id="A"></a>Location</h3>
-                <p>Tuesdays at 9--12 in Huiyuan 3-415
+                <h3><a id="A"></a>About</h3>
+                <p>This is a reading seminar on applied/computational 
+topology. We will be working from Edelsbrunner and Harer's 
+                    <a href="Edelsbrunner-Harer.pdf" target="_blank">Computational 
+topology: an introduction</a>.  To supplement 
+presentations by participants, we will also invite experts in the field 
+to speak.</p>
+
+<p>Computational topology has become a subject that applies to a wide 
+range of topics.  This includes pattern recognition in data science, 
+notably through the method of persistent homology.  It also employs 
+computer softwares to study questions internal to topology and 
+geometry.  We aim to gain an overview of the subject, learn its basic 
+theory and examples, with an emphasis on persistent homology and 
+its applications.</p>
+
+<p>The prerequisite is an undergraduate topology course.  Familiarity 
+with computer programming will be a plus, as well as English 
+proficiency.
+
+</p>
+
+                
+
+  <h3><a id="A"></a>Location</h3>
+                <p>Tuesdays at 9&ndash;12 in Huiyuan 3-415
 
 </p>
 
