--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ proficiency.
                 
 
   <h3><a id="L"></a>Location</h3>
-                <p>Tuesdays at 9&ndash;12 in Huiyuan 3-415
+                <p>Tuesdays 9&ndash;12 in Huiyuan 3-415
 
 </p>
 
@@ -146,7 +146,14 @@ proficiency.
 
   <h3><a id="T"></a>Talks in Fall 2020</h3>
             <p>    
-                <li></li>
+                <b>Yifei Zhu and Ingrid Irmer</b>,
+            <a onclick="toggle_visibility('1');"><i>Overview and organization</i></a>
+            <br />
+            <div id="1" class="toshow" style="display:none">
+                <li>Gunnar Carlsson, <a href="Carlsson-slides.pdf" target="_blank">Topology and data</a></li>
+
+
+            </div>
                 
 
 </p>
