--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ proficiency.
 
   <h3><a id="T"></a>Talks in Fall 2020</h3>
             <p>    
-                <b>Yifei Zhu and Ingrid Irmer</b>,
+                Sep 15 '20, <b>Yifei Zhu and Ingrid Irmer</b>,
             <a onclick="toggle_visibility('1');"><i>Overview and organization</i></a>
             <br />
             <div id="1" class="toshow" style="display:none">
