--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
+<script type="text/javascript">
+<!--
+    function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+    }
+//-->
+</script>
 
 
 <body id="top">
@@ -151,6 +161,7 @@ proficiency.
             <br />
             <div id="1" class="toshow" style="display:none">
                 <li>Gunnar Carlsson, <a href="Carlsson-slides.pdf" target="_blank">Topology and data</a></li>
+                <li>Gunnar Carlsson, <a href="Carlsson-sampler.pdf" target="_blank">Topological modeling of complex data</a></li>
 
 
             </div>
