--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <i>Graphs</i></a><br />
                 <div id="2" class="toshow" style="display:none">
                     Chapter I of Edelsbrunner&ndash;Harer
-                    <li>Notes: <a href="notes/I1.pdf" target="_blank">Notes part 1</a></li>
+                    <li>Notes: <a href="notes/I1.pdf" target="_blank">part 1</a></li>
                 </div>
             </p>
         
