--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div id="3" class="toshow" style="display:none">
                     <li>Chapter I of Edelsbrunner&ndash;Harer, <a href="notes/I2.pdf" target="_blank">notes</a></li>
                     <li>Combinatorial cell decomposition of moduli of surfaces: 
-                        background, graphs, code</li>
+                        background, <a href="graphs.png" target="_blank">graphs</a>, <a href="code.png" target="_blank">code</a></li>
                 </div>
             </p>
         
