--- a/index.html
+++ b/index.html
@@ -240,6 +240,17 @@
             </p>
 
 
+<h3><a id="T"></a>Talks in Spring 2021</h3>
+
+            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
+                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
+                <a onclick="toggle_visibility('10');">
+                    <i>TBA</i></a><br />
+                <div id="10" class="toshow" style="display:none">
+                    TBA
+                </div>
+            </p>
+
 <h3><a id="R"></a>References</h3>
 
             <p>
