--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <i>Examples; surfaces</i></a><br />
                 <div id="4" class="toshow" style="display:none">
                     <li>Some concrete examples from applied math supplementing the main text, <a href="graph-examples.pdf" target="_blank">slides</a></li>
-                    <li>Chapter II of Edelsbrunner&ndash;Harer</li>
+                    <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
         
