--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <a onclick="toggle_visibility('5');">
                     <i>surfaces (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    Chapter II of Edelsbrunner&ndash;Harer, example of an application
+                    Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes-full.pdf" target="_blank">notes</a>, example of an application
                 </div>
             </p>
         
