--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </p>
         
             <p>Oct 13 '20, 
-                <b>Zhen Zhang and Siyu Chen</b>, 
+                <b>Zhen Zhang and Siyu Cen</b>, 
                 <a onclick="toggle_visibility('4');">
                     <i>Examples; surfaces</i></a><br />
                 <div id="4" class="toshow" style="display:none">
@@ -191,7 +191,7 @@
             </p>
         
             <p>Oct 20 '20, 
-                <b>Siyu Chen</b>, 
+                <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('5');">
                     <i>surfaces (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
