--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p>Oct 20 '20, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('5');">
-                    <i>surfaces (cont'd)</i></a><br />
+                    <i>surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes-full.pdf" target="_blank">notes</a>, example of an application <a href="notes/Application of triangulation.pdf" target="_blank">Application</a>
                 </div>
