--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div id="4" class="toshow" style="display:none">
                     <li>Some concrete examples from applied math supplementing the main text, <a href="graph-examples.pdf" target="_blank">slides</a></li>
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes.pdf" target="_blank">notes</a>, 
-                        <a href="notes/orientation example.pdf" target="_blank">orientation example (updated Oct 27 '20)</a></li>
+                        <a href="notes/orientation example.pdf" target="_blank">orientation example</a> (updated Oct 27 '20)</li>
                 </div>
             </p>
         
