--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <i>surfaces (cont'd)</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes II.pdf" target="_blank">notes</a></li>
-                    <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference for application example in talk</a></li>
+                    <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference for triangulation application example in talk</a></li>
                 </div>
             </p>
         
