--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
             <p>Oct 13 '20, 
                 <b>Zhen Zhang and Siyu Cen</b>, 
                 <a onclick="toggle_visibility('4');">
-                    <i>Examples; surfaces</i></a><br />
+                    <i>Graph application examples; surfaces and triangulations</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    <li>Some concrete examples from applied math supplementing the main text, <a href="graph-examples.pdf" target="_blank">slides</a></li>
+                    <li>Some concrete examples from applied math supplementing the main text on graphs, <a href="graph-examples.pdf" target="_blank">slides</a></li>
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes.pdf" target="_blank">notes</a>, 
                         <a href="notes/orientation example.pdf" target="_blank">orientation example</a> (updated Oct 27 '20)</li>
                 </div>
@@ -194,10 +194,10 @@
             <p>Oct 20 '20, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('5');">
-                    <i>surfaces (cont'd)</i></a><br />
+                    <i>Self-intersections and simplifications of surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes II.pdf" target="_blank">notes</a></li>
-                    <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference for triangulation application example in talk</a></li>
+                    <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference</a> for triangulation application example in talk</li>
                 </div>
             </p>
         
@@ -217,7 +217,7 @@
             <p>Oct 27 '20, 
                 <b>Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('7');">
-                    <i>Complexes</i></a><br />
+                    <i>Simplicial complexes</i></a><br />
                 <div id="7" class="toshow" style="display:none">
                     <li>Chapter III of Edelsbrunner&ndash;Harer</li>
                     <li><a href="complex-network.pdf" target="_blank">Supplementary reading on <i>complex</i> network</a></li>
@@ -227,7 +227,7 @@
             <p>Nov 3 '20, 
                 <b>Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('8');">
-                    <i>Complexes (cont'd)</i></a><br />
+                    <i>Čech, Vietoris&ndash;Rips and Delaunay complexes (cont'd)</i></a><br />
                 <div id="8" class="toshow" style="display:none">
                     Chapter III of Edelsbrunner&ndash;Harer
                 </div>
