--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
                     <i>Simplicial complexes</i></a><br />
                 <div id="7" class="toshow" style="display:none">
                     <li>Chapter III of Edelsbrunner&ndash;Harer</li>
-                    <li><a href="complex-network.pdf" target="_blank">Supplementary reading on <i>complex</i> network</a></li>
+                    <li><a href="complex-network.pdf" target="_blank">Supplementary reading</a> on <i>complex</i> network</li>
                 </div>
             </p>
         
             <p>Nov 3 '20, 
                 <b>Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('8');">
-                    <i>Čech, Vietoris&ndash;Rips and Delaunay complexes (cont'd)</i></a><br />
+                    <i>&#268;ech, Vietoris&ndash;Rips and Delaunay complexes (cont'd)</i></a><br />
                 <div id="8" class="toshow" style="display:none">
                     Chapter III of Edelsbrunner&ndash;Harer
                 </div>
