--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <a onclick="toggle_visibility('3');">
                     <i>Plane curves, knots and links; examples</i></a><br />
                 <div id="3" class="toshow" style="display:none">
-                    <li>Chapter I of Edelsbrunner&ndash;Harer, <a href="notes/I2.pdf" target="_blank">notes</a></li>
+                    <li>Chapter I of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/I2.pdf" target="_blank">notes</a></li>
                     <li>Combinatorial cell decomposition of moduli of surfaces: 
                         background, <a href="graphs.png" target="_blank">graphs</a>, <a href="code.png" target="_blank">code</a></li>
                 </div>
@@ -196,7 +196,7 @@
                 <a onclick="toggle_visibility('5');">
                     <i>Self-intersections and simplifications of surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
-                    <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes II.pdf" target="_blank">notes</a></li>
+                    <li>Chapter II of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/Ch2notes II.pdf" target="_blank">notes</a></li>
                     <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference</a> for triangulation application example in talk</li>
                 </div>
             </p>
@@ -227,9 +227,9 @@
             <p>Nov 3 '20, 
                 <b>Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('8');">
-                    <i>&#268;ech, Vietoris&ndash;Rips and Delaunay complexes (cont'd)</i></a><br />
+                    <i>&#268;ech, Vietoris&ndash;Rips, and Delaunay complexes</i></a><br />
                 <div id="8" class="toshow" style="display:none">
-                    Chapter III of Edelsbrunner&ndash;Harer
+                    Chapter III of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
             </p>
         
