--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <p>Nov 3 '20, 
                 <b>Jizhang Liu</b>, 
                 <a onclick="toggle_visibility('8');">
-                    <i>&#268;ech, Vietoris&ndash;Rips, and Delaunay complexes</i></a><br />
+                    <i>&#x010C;ech, Vietoris&ndash;Rips, and Delaunay complexes</i></a><br />
                 <div id="8" class="toshow" style="display:none">
                     Chapter III of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
