--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <p>Oct 13 '20, 
                 <b>Zhen Zhang and Siyu Cen</b>, 
                 <a onclick="toggle_visibility('4');">
-                    <i>Graph application examples; surfaces and triangulations</i></a><br />
+                    <i>Graph application examples; triangulation of surfaces</i></a><br />
                 <div id="4" class="toshow" style="display:none">
                     <li>Some concrete examples from applied math supplementing the main text on graphs, <a href="graph-examples.pdf" target="_blank">slides</a></li>
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/Ch2notes.pdf" target="_blank">notes</a>, 
@@ -194,7 +194,7 @@
             <p>Oct 20 '20, 
                 <b>Siyu Cen</b>, 
                 <a onclick="toggle_visibility('5');">
-                    <i>Self-intersections and simplifications of surfaces</i></a><br />
+                    <i>Self-intersection and simplification of surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li>Chapter II of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/Ch2notes II.pdf" target="_blank">notes</a></li>
                     <li><a href="notes/Application of triangulation.pdf" target="_blank">Reference</a> for triangulation application example in talk</li>
