--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </div>
             </p>
         
-            <p> 
+            <p>Nov 10 '20, 
                 <b>Yifan Wu</b>, 
                 <a onclick="toggle_visibility('10');">
                     <i>Homology</i></a><br />
