--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <i>Self-intersection and simplification of surfaces</i></a><br />
                 <div id="5" class="toshow" style="display:none">
                     <li>Chapter II of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/II2.pdf" target="_blank">notes</a></li>
-                    <li><a href="notes/II2.5.pdf" target="_blank">Reference</a> for triangulation application example in talk</li>
+                    <li><a href="papers/Connolly.pdf" target="_blank">Reference</a> for triangulation application example in talk</li>
                 </div>
             </p>
         
@@ -220,7 +220,7 @@
                     <i>Simplicial complexes</i></a><br />
                 <div id="7" class="toshow" style="display:none">
                     <li>Chapter III of Edelsbrunner&ndash;Harer, <a href="notes/III1.pdf" target="_blank">notes</a></li>
-                    <li><a href="complex-network.pdf" target="_blank">Supplementary reading</a> on <i>complex</i> network</li>
+                    <li><a href="papers/Schaub et al.pdf" target="_blank">Supplementary reading</a> on <i>complex</i> network</li>
                 </div>
             </p>
         
