--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                         Topological analysis of structural and functional data</a></li>
                     
                     Motivations and basic ideas:
-                    <li>Gunnar Carlsson, <a href="Carlsson-sampler.pdf" target="_blank">Topological modeling of complex data</a></li>
-                    <li>Gunnar Carlsson, <a href="Carlsson-slides.pdf" target="_blank">Topology and data</a></li>
+                    <li>Gunnar Carlsson, <a href="papers/Carlsson.pdf" target="_blank">Topological modeling of complex data</a></li>
+                    <li>Gunnar Carlsson, <a href="slides/Carlsson.pdf" target="_blank">Topology and data</a></li>
                 </div>
             </p>
         
@@ -185,7 +185,7 @@
                 <a onclick="toggle_visibility('4');">
                     <i>Graph application examples; triangulation of surfaces</i></a><br />
                 <div id="4" class="toshow" style="display:none">
-                    <li>Some concrete examples from applied math supplementing the main text on graphs, <a href="graph-examples.pdf" target="_blank">slides</a></li>
+                    <li>Some concrete examples from applied math supplementing the main text on graphs, <a href="slides/Zhang.pdf" target="_blank">slides</a></li>
                     <li>Chapter II of Edelsbrunner&ndash;Harer, <a href="notes/II1.pdf" target="_blank">notes</a>, 
                         <a href="notes/II1.5.pdf" target="_blank">orientation example</a> (updated Nov 1 '20)</li>
                 </div>
