--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
             </p>
         
-            <p>Oct 23 '20 (Friday, 4:30&ndash;5:30 pm, zoom: 685 0623 5836), 
+            <p><a href="slides/Wu.pdf" target="_blank"><b>[Slides]</b></a>Oct 23 '20 (Friday, 4:30&ndash;5:30 pm, zoom: 685 0623 5836), 
                 <b>Jie Wu</b> (Hebei Normal University), 
                 <a onclick="toggle_visibility('6');">
                     <i>Topological data analysis and topological approaches to drug design and discovery</i></a><br />
