--- a/index.html
+++ b/index.html
@@ -252,18 +252,46 @@
             <p>Nov 10 '20, 
                 <b>Yifan Wu</b>, 
                 <a onclick="toggle_visibility('10');">
-                    <i>Homology</i></a><br />
+                    <i>Homology and matrix reduction</i></a><br />
                 <div id="10" class="toshow" style="display:none">
-                    Chapter IV of Edelsbrunner&ndash;Harer
+                    Chapter IV of Edelsbrunner&ndash;Harer, <a href="notes/IV.pdf" target="_blank">notes</a>
                 </div>
             </p>
 
-            <p> 
+            <p>Nov 17 '20, 
                 <b>Yifan Wu</b>, 
                 <a onclick="toggle_visibility('11');">
-                    <i>Duality</i></a><br />
+                    <i>Cohomology, dual block decompositions, and Poincaré duality</i></a><br />
                 <div id="11" class="toshow" style="display:none">
-                    Chapter V of Edelsbrunner&ndash;Harer
+                    Chapter V of Edelsbrunner&ndash;Harer, <a href="notes/V1.pdf" target="_blank">notes</a>
+                </div>
+            </p>
+
+            <p>Nov 24 '20, 
+                <b>Yifan Wu</b>, 
+                <a onclick="toggle_visibility('12');">
+                    <i>Lefschetz and Alexander dualities</i></a><br />
+                <div id="12" class="toshow" style="display:none">
+                    Chapter V of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/V2.pdf" target="_blank">notes</a>
+                </div>
+            </p>
+
+            <p>Dec 1 '20, 
+                <b>Xiabing Ruan and Wenbo Liao</b>, 
+                <a onclick="toggle_visibility('13');">
+                    <i>Persistent homology, persistence diagrams, and matrix reduction; introduction to Morse theory</i></a><br />
+                <div id="13" class="toshow" style="display:none">
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (to be cont'd), <a href="notes/VII1.pdf" target="_blank">notes</a></li>
+                    <li>Chapter VI of Edelsbrunner&ndash;Harer</li>
+                </div>
+            </p>
+
+            <p>Dec 8 '20, 
+                <b>Wenbo Liao and Yifei Zhu</b>, 
+                <a onclick="toggle_visibility('14');">
+                    <i>More Morse theory, in the piecewise linear setting</i></a><br />
+                <div id="13" class="toshow" style="display:none">
+                    Chapter VI of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
             </p>
 
