--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
 
             <p>
                 <li><a href="References.pdf"_blank">Some references for computational topology</a></li>
+                <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
+                <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.amazon.com/Topological-Data-Analysis-Genomics-Evolution/dp/1107159547" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
                 
             </p>
 
