--- a/index.html
+++ b/index.html
@@ -287,22 +287,43 @@
             </p>
 
             <p>Dec 8 '20, 
-                <b>Wenbo Liao and Yifei Zhu</b>, 
+                <b>Wenbo Liao</b>, 
                 <a onclick="toggle_visibility('14');">
-                    <i>More Morse theory, in the piecewise linear setting</i></a><br />
+                    <i>More Morse theory</i></a><br />
                 <div id="14" class="toshow" style="display:none">
                     Chapter VI of Edelsbrunner&ndash;Harer (cont'd)
+                </div>
+            </p>
+
+            <p>Dec 15 '20, 
+                <b>Yifei Zhu and Xiabing Ruan</b>, 
+                <a onclick="toggle_visibility('15');">
+                    <i>Piecewise linear Morse theory; efficient implementations of persistent homology</i></a><br />
+                <div id="15" class="toshow" style="display:none">
+                    <li>Chapter VI of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VI2.pdf" target="_blank">notes</a></li>
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd)</li>
+                </div>
+            </p>
+
+            <p>Dec 22 '20, 
+                <b>Xiabing Ruan</b>, 
+                <a onclick="toggle_visibility('16');">
+                    <i>More persistence</i></a><br />
+                <div id="16" class="toshow" style="display:none">
+                    Chapter VII of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
             </p>
 
 
 <h3><a id="T"></a>Talks in Spring 2021</h3>
 
+            <p>Jan 12 '21, TBA</p>
+
             <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
                 <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
-                <a onclick="toggle_visibility('12');">
+                <a onclick="toggle_visibility('17');">
                     <i>TBA</i></a><br />
-                <div id="12" class="toshow" style="display:none">
+                <div id="17" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
