--- a/index.html
+++ b/index.html
@@ -317,13 +317,20 @@
 
 <h3><a id="T"></a>Talks in Spring 2021</h3>
 
-            <p>Jan 12 '21, TBA</p>
+            <p>Jan 12 '21, 
+<!--                <b></b>, 
+-->                <a onclick="toggle_visibility('17');">
+                    <i>TBA</i></a><br />
+                <div id="17" class="toshow" style="display:none">
+                    TBA
+                </div>
+            </p>
 
             <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
                 <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
-                <a onclick="toggle_visibility('17');">
+                <a onclick="toggle_visibility('18');">
                     <i>TBA</i></a><br />
-                <div id="17" class="toshow" style="display:none">
+                <div id="18" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
