--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <p>Dec 22 '20, 
                 <b>Xiabing Ruan</b>, 
                 <a onclick="toggle_visibility('16');">
-                    <i>More persistence</i></a><br />
+                    <i>Efficient implementations of persistent homology (cont'd)</i></a><br />
                 <div id="16" class="toshow" style="display:none">
                     Chapter VII of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
@@ -317,12 +317,12 @@
 
 <h3><a id="T"></a>Talks in Spring 2021</h3>
 
-            <p>Jan 12 '21, 
-<!--                <b></b>, 
--->                <a onclick="toggle_visibility('17');">
-                    <i>TBA</i></a><br />
+            <p>Jan 12 &amp; 19, '21, 
+                <b>Xiabing Ruan and Yifan Wu</b>, 
+                <a onclick="toggle_visibility('17');">
+                    <i>Extended persistence, spectral sequences; topological time series analysis, applications in the literature</i></a><br />
                 <div id="17" class="toshow" style="display:none">
-                    TBA
+                    Chapter VII of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
             </p>
 
