--- a/index.html
+++ b/index.html
@@ -317,20 +317,29 @@
 
 <h3><a id="T"></a>Talks in Spring 2021</h3>
 
-            <p>Jan 12 &amp; 19, '21, 
-                <b>Xiabing Ruan and Yifan Wu</b>, 
+            <p>Jan 12, '21, 
+                <b>Yifan Wu</b>, 
                 <a onclick="toggle_visibility('17');">
-                    <i>Extended persistence, spectral sequences; topological time series analysis, applications in the literature</i></a><br />
+                    <i>Topological time series analysis, applications in the literature</i></a><br />
                 <div id="17" class="toshow" style="display:none">
+                    Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a>
+                </div>
+            </p>
+
+            <p>Jan 19, '21, 
+                <b>Xiabing Ruan</b>, 
+                <a onclick="toggle_visibility('18');">
+                    <i>Extended persistence, spectral sequences</i></a><br />
+                <div id="18" class="toshow" style="display:none">
                     Chapter VII of Edelsbrunner&ndash;Harer (cont'd)
                 </div>
             </p>
 
             <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
                 <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
-                <a onclick="toggle_visibility('18');">
+                <a onclick="toggle_visibility('19');">
                     <i>TBA</i></a><br />
-                <div id="18" class="toshow" style="display:none">
+                <div id="19" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
@@ -341,7 +350,6 @@
                 <li><a href="References.pdf"_blank">Some references for computational topology</a></li>
                 <li>Herbert Edelsbrunner and John L. Harer, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=2572029" target="_blank">Computational topology: an introduction</a></li>
                 <li>Raúl Rabadán and Andrew J. Blumberg, <a href="https://www.amazon.com/Topological-Data-Analysis-Genomics-Evolution/dp/1107159547" target="_blank">Topological data analysis for genomics and evolution: topology in biology</a></li>
-                <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
             </p>
 
 
