--- a/student-seminar.html
+++ b/student-seminar.html
@@ -125,7 +125,7 @@
 
             <li>Applied and computational topology: continuation of <a href="index.html" target="_blank">ACTS</a> 
                 with <a href="Edelsbrunner-Harer.pdf" target="_blank">Edelsbrunner&ndash;Harer</a> Chapters VIII&ndash;IX and 
-                Rabadán&ndash;Blumberg for theoretical aspects, along with
+                <a href="https://www.cambridge.org/core/books/topological-data-analysis-for-genomics-and-evolution/FCC8429FAD2B5D1525AEA47A8366D6EB" target="_blank">Rabadán&ndash;Blumberg</a> for theoretical aspects, along with
                 more specific readings towards applications.</li>
             
             <li>Manifolds and modular forms: <a href="https://link.springer.com/book/10.1007/978-3-663-10726-2" target="_blank">Hirzebruch et al</a></li>
