--- a/student-seminar.html
+++ b/student-seminar.html
@@ -121,7 +121,7 @@
 <article class="row format-standard">
 
 
-<h3><a href="GT-student-seminar.docx" target="_blank">Course Description</a></h3>
+<h3><a href="GT-student-seminar.pdf" target="_blank">Course Description</a></h3>
   
 <h3>Possible Topics</h3>
 
