--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <a onclick="toggle_visibility('2');">
                     <i>Graphs and planar graphs</i></a><br />
                 <div id="2" class="toshow" style="display:none">
-                    Chapter I of Edelsbrunner&ndash;Harer, <a href="notes/I1.pdf" target="_blank">notes</a>
+                    <li>Chapter I of Edelsbrunner&ndash;Harer, <a href="notes/I1.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
         
@@ -229,7 +229,7 @@
                 <a onclick="toggle_visibility('8');">
                     <i>Čech, Vietoris&ndash;Rips, and Delaunay complexes</i></a><br />
                 <div id="8" class="toshow" style="display:none">
-                    Chapter III of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/III2.pdf" target="_blank">notes</a>
+                    <li>Chapter III of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/III2.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
         
@@ -254,7 +254,7 @@
                 <a onclick="toggle_visibility('10');">
                     <i>Homology and matrix reduction</i></a><br />
                 <div id="10" class="toshow" style="display:none">
-                    Chapter IV of Edelsbrunner&ndash;Harer, <a href="notes/IV.pdf" target="_blank">notes</a>
+                    <li>Chapter IV of Edelsbrunner&ndash;Harer, <a href="notes/IV.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
@@ -263,7 +263,7 @@
                 <a onclick="toggle_visibility('11');">
                     <i>Cohomology, dual block decompositions, and Poincaré duality</i></a><br />
                 <div id="11" class="toshow" style="display:none">
-                    Chapter V of Edelsbrunner&ndash;Harer, <a href="notes/V1.pdf" target="_blank">notes</a>
+                    <li>Chapter V of Edelsbrunner&ndash;Harer, <a href="notes/V1.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
@@ -272,7 +272,7 @@
                 <a onclick="toggle_visibility('12');">
                     <i>Lefschetz and Alexander dualities</i></a><br />
                 <div id="12" class="toshow" style="display:none">
-                    Chapter V of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/V2.pdf" target="_blank">notes</a>
+                    <li>Chapter V of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/V2.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
@@ -291,7 +291,7 @@
                 <a onclick="toggle_visibility('14');">
                     <i>More Morse theory</i></a><br />
                 <div id="14" class="toshow" style="display:none">
-                    Chapter VI of Edelsbrunner&ndash;Harer (cont'd)
+                    <li>Chapter VI of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VI1.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
@@ -322,7 +322,9 @@
                 <a onclick="toggle_visibility('17');">
                     <i>Topological time series analysis, applications in the literature</i></a><br />
                 <div id="17" class="toshow" style="display:none">
-                    Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a>
+                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
+                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="wheeze-detection.pdf" target="_blank">
+                        Persistent homology of delay embeddings and its application to wheeze detection</a></li>
                 </div>
             </p>
 
@@ -331,7 +333,7 @@
                 <a onclick="toggle_visibility('18');">
                     <i>Extended persistence, spectral sequences</i></a><br />
                 <div id="18" class="toshow" style="display:none">
-                    Chapter VII of Edelsbrunner&ndash;Harer (cont'd)
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd)</li>
                 </div>
             </p>
 
