--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <i>Topological time series analysis, applications in the literature</i></a><br />
                 <div id="17" class="toshow" style="display:none">
                     <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
-                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="wheeze-detection.pdf" target="_blank">
+                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
                         Persistent homology of delay embeddings and its application to wheeze detection</a></li>
                 </div>
             </p>
