--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <a onclick="toggle_visibility('16');">
                     <i>Efficient implementations of persistent homology (cont'd)</i></a><br />
                 <div id="16" class="toshow" style="display:none">
-                    Chapter VII of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VII2.pdf" target="_blank">notes</a></li>
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd), <a href="notes/VII2.pdf" target="_blank">notes</a></li>
                 </div>
             </p>
 
