--- a/index.html
+++ b/index.html
@@ -137,12 +137,7 @@
                 material with faculty participants prior to your presentations.</p>
 
 
-<h3><a id="L"></a>Location</h3>
-
-            <p>Tuesdays 9&ndash;12 in Huiyuan 3-415</p>
-
-
-<h3><a id="T"></a>Talks in Fall 2020</h3>
+<h3><a id="T"></a>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
 
             <p>Sep 15 '20, 
                 <b>Yifei Zhu and Ingrid Irmer</b>, 
@@ -315,7 +310,7 @@
             </p>
 
 
-<h3><a id="T"></a>Talks in Spring 2021</h3>
+<h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 9&ndash;12 in Huiyuan 3-415)</h3>
 
             <p>Jan 12, '21, 
                 <b>Yifan Wu</b>, 
@@ -324,7 +319,9 @@
                 <div id="17" class="toshow" style="display:none">
                     <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                     <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
-                        Persistent homology of delay embeddings and its application to wheeze detection</a></li>
+                        Persistent homology of delay embeddings and its application to wheeze detection</a> 
+                        (<a href="papers/Emrani et al-appendices.pdf" target="_blank">
+                        appendices</a>)</li>
                 </div>
             </p>
 
@@ -337,11 +334,20 @@
                 </div>
             </p>
 
-            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
-                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
-                <a onclick="toggle_visibility('19');">
+            <p>Mar 1, '21, 
+            <!--<b>Xiabing Ruan</b>, 
+            --> <a onclick="toggle_visibility('19');">
                     <i>TBA</i></a><br />
                 <div id="19" class="toshow" style="display:none">
+                    <li>TBA</li>
+                </div>
+            </p>
+
+            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
+                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
+                <a onclick="toggle_visibility('20');">
+                    <i>TBA</i></a><br />
+                <div id="20" class="toshow" style="display:none">
                     TBA
                 </div>
             </p>
