--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
                     <ul class="header__nav">
                         <li><a href="#A" title="">About</a></li>
-                    <li><a href="#L" title="">Location</a></li>
                         <li><a href="#T" title="">Talks</a></li>
                         <li><a href="#R" title="">References</a></li>
     
@@ -137,7 +136,7 @@
                 material with faculty participants prior to your presentations.</p>
 
 
-<h3><a id="T"></a>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
+<h3>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
 
             <p>Sep 15 '20, 
                 <b>Yifei Zhu and Ingrid Irmer</b>, 
@@ -320,8 +319,7 @@
                     <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
                     <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
                         Persistent homology of delay embeddings and its application to wheeze detection</a> 
-                        (<a href="papers/Emrani et al-appendices.pdf" target="_blank">
-                        appendices</a>)</li>
+                        (<a href="papers/Emrani et al-appendices.pdf" target="_blank">appendices</a>)</li>
                 </div>
             </p>
 
