--- a/index.html
+++ b/index.html
@@ -134,6 +134,50 @@
             <p>The prerequisite is an undergraduate topology course.  Familiarity with computer programming will be a plus, 
                 as well as English proficiency.  For student participants, we encourage you to informally discuss the 
                 material with faculty participants prior to your presentations.</p>
+    
+            <p>Our focus in Spring 2021 is recent research with specific applications as well as further theoretical aspects.</p>
+
+
+<h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 9&ndash;12 in Huiyuan 3-415)</h3>
+
+            <p>Jan 12, '21, 
+                <b>Yifan Wu</b>, 
+                <a onclick="toggle_visibility('17');">
+                    <i>Topological time series analysis, applications in the literature</i></a><br />
+                <div id="17" class="toshow" style="display:none">
+                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
+                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
+                        Persistent homology of delay embeddings and its application to wheeze detection</a> 
+                        (<a href="papers/Emrani et al-appendices.pdf" target="_blank">appendices</a>)</li>
+                </div>
+            </p>
+
+            <p>Jan 19, '21, 
+                <b>Xiabing Ruan</b>, 
+                <a onclick="toggle_visibility('18');">
+                    <i>Extended persistence, spectral sequences</i></a><br />
+                <div id="18" class="toshow" style="display:none">
+                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd)</li>
+                </div>
+            </p>
+
+            <p>Mar 1, '21, 
+            <!--<b>Xiabing Ruan</b>, 
+            --> <a onclick="toggle_visibility('19');">
+                    <i>TBA</i></a><br />
+                <div id="19" class="toshow" style="display:none">
+                    <li>TBA</li>
+                </div>
+            </p>
+
+            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
+                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
+                <a onclick="toggle_visibility('20');">
+                    <i>TBA</i></a><br />
+                <div id="20" class="toshow" style="display:none">
+                    TBA
+                </div>
+            </p>
 
 
 <h3>Talks in Fall 2020 (mostly Tuesdays 9&ndash;12 in Huiyuan 3-415)</h3>
@@ -308,47 +352,6 @@
                 </div>
             </p>
 
-
-<h3><a id="T"></a>Talks in Spring 2021 (mostly Mondays 9&ndash;12 in Huiyuan 3-415)</h3>
-
-            <p>Jan 12, '21, 
-                <b>Yifan Wu</b>, 
-                <a onclick="toggle_visibility('17');">
-                    <i>Topological time series analysis, applications in the literature</i></a><br />
-                <div id="17" class="toshow" style="display:none">
-                    <li>Jose A. Perea, <a href="https://www.ams.org/journals/notices/201905/rnoti-p686.pdf" target="_blank">Topological time series analysis</a></li>
-                    <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
-                        Persistent homology of delay embeddings and its application to wheeze detection</a> 
-                        (<a href="papers/Emrani et al-appendices.pdf" target="_blank">appendices</a>)</li>
-                </div>
-            </p>
-
-            <p>Jan 19, '21, 
-                <b>Xiabing Ruan</b>, 
-                <a onclick="toggle_visibility('18');">
-                    <i>Extended persistence, spectral sequences</i></a><br />
-                <div id="18" class="toshow" style="display:none">
-                    <li>Chapter VII of Edelsbrunner&ndash;Harer (cont'd)</li>
-                </div>
-            </p>
-
-            <p>Mar 1, '21, 
-            <!--<b>Xiabing Ruan</b>, 
-            --> <a onclick="toggle_visibility('19');">
-                    <i>TBA</i></a><br />
-                <div id="19" class="toshow" style="display:none">
-                    <li>TBA</li>
-                </div>
-            </p>
-
-            <p>Mar 26 '21 (Friday, 9:00&ndash;10:00 am, zoom), 
-                <b>Nathan Dunfield</b> (University of Illinois at Urbana-Champaign), 
-                <a onclick="toggle_visibility('20');">
-                    <i>TBA</i></a><br />
-                <div id="20" class="toshow" style="display:none">
-                    TBA
-                </div>
-            </p>
 
 <h3><a id="R"></a>References</h3>
 
