--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <li><a href="#A" title="">About</a></li>
                         <li><a href="#T" title="">Talks</a></li>
                         <li><a href="#R" title="">References</a></li>
+                        <li><a href="student-seminar.html" title="" target="_blank">Student Seminar</a></li>
     
                     </ul> 
                     <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
