--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                     <li>Saba Emrani, Thanos Gentimis, and Hamid Krim, <a href="papers/Emrani et al.pdf" target="_blank">
                         Persistent homology of delay embeddings and its application to wheeze detection</a> 
                         (<a href="papers/Emrani et al-appendices.pdf" target="_blank">appendices</a>)</li>
+                    <li><a href="slides/Wu-Y.pdf" target="_blank">Slides</a></li>
                 </div>
             </p>
 
